@@ -33,13 +33,14 @@
     color: #AAA;
     font-style: italic;
 }
-span.comment-link a {
+table.comments td.comment p a {
     text-decoration: underline;
 }
-span.comment-link:after {
-    content: " "attr(title) " ";
+table.comments td.comment p a:after {
+    content: attr(href);
     color: #aaa;
-    text-decoration: none;
+    display: inline-block; /* Show the URL without the link's underline extending under it. */
+    padding: 0 1ex; /* Because it's inline block, we can't just use spaces in the content: attribute to separate it from the link text. */
 }
 .mshot-arrow {
     width: 0;
