@@ -2,6 +2,7 @@
     <?php foundationpress_mobile_off_canvas(); ?>
     	<a href="/"><i class="fa fa-motorcycle"></i> Latest Ebike News</a>
     	<a href="/shops/"><i class="fa fa-building-o"></i> Electric Bike Shops</a>
+    	<a href="/the-best-electric-bike-shops-map/"><i class="fa fa-globe"></i> Best Bike Shops Map</a>
     	<a target="_blank" href="/subscribe"><i class="fa fa-newspaper-o"></i> Subscribe</a>
         <a target="_blank" href="http://instagram.com/overvolted"><i class="fa fa-instagram"></i> Follow On Instagram</a>
         <a target="_blank" href="http://facebook.com/overvolted"><i class="fa fa-facebook-official"></i> Follow On Facebook</a>
